--- a/ejercicio6ParqueNAtural/css/estilo.css
+++ b/ejercicio6ParqueNAtural/css/estilo.css
@@ -14,8 +14,8 @@ em{
     color:springgreen
 }
 h3{
-    color: violet;
+    color: rgb(219, 123, 59);
 }
 p{
-    background-color: darkcyan; border-radius: 3px;
+    background-color: burlywood; border-radius: 3px;
 }
